2007-02-20  Akim Demaille  <demaille@gostai.com>

	UCommand::tmp_*
	* src/ucommand.hh, src/ucommand.cc (tmp_phase, tmp_time): remove.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Use find0
	* src/ucommand.cc (UCommand::scanGroups)
	(UCommand_ASSIGN_VALUE::execute_function_call): here.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Use find0
	* src/uvariablename.cc (UVariableName::getVariable)
	(UVariableName::getFunction, UVariableName::buildFullname): Here.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Add missing consts
	Oh my God!  There is so much duplication here :(
	* src/uobj.hh, src/uobj.cc (searchFunction, searchVariable)
	(searchEvent): Here.
	Also, use const_iterators.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	Get rid of buffers
	* src/uvariablename.hh (set_fullname): Move to...
	* src/uvariablename.cc: here.
	(resolve_aliases): New.
	This simple function was really hard to extract from the code
	and its lack of documentation...  I hope I have it right.
	Use it.
	Use std::strings instead of buffers.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	More UString operators
	* src/ustring.hh (operator!=): New.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	Get rid of buffers
	* src/uvariablename.hh, src/uvariablename.cc (build_from_str): New.
	(buildFullname): Use it.
	Don't use static buffers.
	Factor and try to be readable.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	Factor a bit UVariableName
	This code is really hard to follow, and Aibo crashes somewhere here
	(apparently, but it is hard to track).
	* src/uvariablename.hh, src/uvariablename.cc (set_fullname): New.
	(prefix, suffix): New.
	Use it.
	Prefer strlcpy to strncpy (I'll worry about portability later).
	Instrument for ECHO etc. but do not activate.
	Shorten some scopes.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	update UString
	* src/ustring.hh (update): New.
	Hopefully, should disapear in the future, together with UStrings.
